feat(license): License update.
